# Reagent

./: .gitignore  Cargo.toml  LICENSE  README.md  bla.rs  converstion.json
agent/: Cargo.toml
agent/src/: lib.rs
agent/src/models/: agent.rs  agent_builder.rs  error.rs  mod.rs
agent/src/services/: mod.rs  ollama_old.rs
agent/src/services/mcp/: mcp_tool_builder.rs  mod.rs
agent/src/services/ollama/: client.rs  mod.rs  models.rs  tool_builder.rs
agent/src/services/ollama/models/: base.rs  embedding.rs  errors.rs  mod.rs  tool.rs  tool_builder.rs
examples/: 01_simple_agent.rs  02_structured_output.rs  03_simple_agent_with_local_tools.rs  04_mcp_agent.rs  05_agent_calling_another_agent.rs  06_simple_notification_agent.rs  07_custom_flow_agent.rs  08_custom_flow_closure.rs  09_template_simple.rs  10_template_data_source copy.rs  10_template_data_source.rs  11_manual_tool_execution.rs  11_prebuilds.rs  12_plan_and_execute.rs  12_prebuilds.rs  12_straming.rs  13_plan_and_execute.rs  14_switching_providers.rs  15_saving_additional_internal_data.rs  16_invocations_without_agent.rs  17_langfuse_observability.rs  18_skills.rs  19_bash.rs  custom_flow_agent.rs  custom_flow_closure.rs  mcp_agent.rs  simple_agent.rs  simple_notification_agent.rs
examples/skills/summarizer/: SKILL.md
src/: lib.rs  main.rs
src/agent/: mod.rs
src/agent/flow/: mod.rs
src/agent/flow/flows/: default_flow.rs  reply_and_call_tools.rs  reply_with_tools.rs  reply_without_tools.rs
src/agent/models/: agent.rs  agent_builder.rs  configs.rs  error.rs  flow_types.rs  mod.rs
src/agent/tools/: tool_builder.rs
src/agent/util/: error.rs  invocation_builder.rs  invocation_request.rs  invocations.rs  mod.rs
src/flows/: call_tools.rs  default_flow.rs  flow_types.rs  mod.rs  reply.rs  reply_with_tools.rs  reply_without_tools.rs
src/models/: agent.rs  agent_builder.rs  configs.rs  error.rs  mod.rs  notification.rs
src/models/agents/: agent.rs  agent_builder.rs  mod.rs
src/models/agents/flow/: invocation_flows.rs  mod.rs
src/models/agents/flow/flows/: default_flow.rs  mod.rs  plan_and_execute.rs  reply_and_call_tools.rs  reply_with_tools.rs  reply_without_tools.rs  simple_loop.rs
src/models/agents/flow/util/: invocations.rs  request_generation.rs
src/models/flow/: invocation_flows.rs  mod.rs  simple_loop.rs
src/models/flow/util/: invocations.rs  mod.rs  request_generation.rs  templating.rs
src/models/invocation/: invocation_handler.rs  invocation_util.rs  mod.rs  simple_loop.rs
src/models/nodes/: mod.rs  node.rs
src/notifications/: handler.rs  inference_channel.rs  mod.rs  notification.rs  notiifcation_content.rs
src/observability/: langfuse.rs  mod.rs
src/prebuilds/: mod.rs
src/prebuilds/statefull/: call_tools.rs  call_tools_and_reply.rs  mod.rs  plan_and_execute.rs  reply.rs  reply_and_call_tools.rs  reply_using_tools.rs  reply_without_tools.rs
src/prebuilds/stateless/: call_tools.rs  call_tools_and_reply.rs  mod.rs  reply.rs  reply_and_call_tools.rs  reply_using_tools.rs  reply_without_tools.rs
src/services/: logging.rs  mod.rs
src/services/llm/: client.rs  client_config.rs  mod.rs
src/services/llm/models/: base.rs  chat.rs  embedding.rs  errors.rs  message.rs  mod.rs  sturctured_output.rs
src/services/llm/providers/: anthropic.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/services/mcp/: error.rs  mcp_tool_builder.rs  mod.rs
src/services/ollama/: client.rs  mod.rs
src/services/ollama/models/: base.rs  chat.rs  embedding.rs  errors.rs  generate.rs  mod.rs  tool.rs  tool_builder.rs
src/skills/: error.rs  loader.rs  mod.rs  models.rs  prompt.rs  tool.rs
src/skills/prebuilt/: mod.rs
src/skills/prebuilt/bash_skill/: SKILL.md
src/templates/: data_source.rs  errors.rs  mod.rs  template.rs
src/templates/core_templates/: mod.rs  skill_discovery_template.rs  skill_system_prompt.rs
src/tools/: errors.rs  mod.rs  tool.rs  tool_builder.rs
src/tools/prebuilt/: bash.rs
src/util/: invocations.rs  mod.rs  notification.rs  request_generation.rs  templating.rs
