[package]
name = "reagent"
version = "0.1.2"
edition = "2021"
description = "A minimal-abstraction Rust library for building Ollama-powered AI agents with MCP & custom tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VakeDomen/reagent"
documentation = "https://docs.rs/reagent"
homepage = "https://github.com/VakeDomen/reagent#readme"
readme = "README.md"
keywords = ["llm", "ollama", "agent", "rust", "mcp", "tool-calling"]
categories = ["machine-learning", "asynchronous", "network-programming"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmcp = { version = "0.2.1", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
] }
tokio = {version ="1.45.1", features = ["rt-multi-thread"]}
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures = "0.3"
tokio-stream  = "0.1"
async-stream  = "0.3"


[dev-dependencies]
futures = "0.3.31"

