[package]
name = "reagent-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "A Rust library for building AI agents with MCP & custom tools"
license = "MIT"
repository = "https://github.com/VakeDomen/reagent"
documentation = "https://docs.rs/reagent-rs"
homepage = "https://github.com/VakeDomen/reagent"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]
keywords = ["llm", "ollama", "agent", "mcp", "tool-calling"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmcp = { version = "0.2.1", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
] }
tokio = {version ="1.45.1", features = ["rt-multi-thread"]}
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures = "0.3"
tokio-stream  = "0.1"
async-stream  = "0.3"


[dev-dependencies]
futures = "0.3.31"
schemars = { version = "0.8", features = ["derive_json_schema"] }
