[package]
name = "reagent-rs"
version = "0.2.7"
edition = "2021"
rust-version = "1.74"
description = "A Rust library for building AI agents with MCP & custom tools"
license = "MIT"
repository = "https://github.com/VakeDomen/reagent"
documentation = "https://docs.rs/reagent-rs"
homepage = "https://github.com/VakeDomen/reagent"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]
keywords = ["llm", "ollama", "agent", "mcp", "tool-calling"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmcp = { version = "0.2.1", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
] }
tokio = {version ="1.45.1", features = ["rt-multi-thread"]}
futures = "0.3"
tokio-stream  = "0.1"
async-stream  = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }


tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-opentelemetry = "0.32"

opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace", "experimental_async_runtime", "experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-http = "0.31"
opentelemetry-semantic-conventions = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
opentelemetry-langfuse = "0.6"

[dev-dependencies]
futures = "0.3.31"
schemars = { version = "0.8", features = ["derive_json_schema"] }
