[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.18", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
] }
tokio = {version ="1.45.1", features = ["rt-multi-thread"]}